--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.63.6",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.3.2",
