--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.6",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
