--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
@@ -24,6 +25,7 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
