--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "next": "13.4.7",
     "postcss": "^8.4.24",
     "react": "18.2.0",
