--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "install": "^0.13.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "next": "13.4.7",
+    "npm": "^10.0.0",
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
+    "react-responsive": "^9.0.2",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
