--- a/data/serviceAssurance.json
+++ b/data/serviceAssurance.json
@@ -3,7 +3,8 @@
     "title": "Zuca’s Assurance as a Web App Development Company",
     "image": "/AssuraceBanner.png",
     "buttonLink": "/",
-    "buttonName": "Work with us"
+    "buttonName": "Work with us",
+    "sideImage": "/AssuranceImage.svg"
   },
   "header": [
     {
