--- a/data/serviceAssurance.json
+++ b/data/serviceAssurance.json
@@ -1,6 +1,6 @@
 {
   "bannerData": {
-    "title": "Zuca’s Assurance as a Web App Development Company",
+    "title": "Zuca’s Assuranc as a Web App Development Company",
     "image": "/AssuraceBanner.png",
     "buttonLink": "/",
     "buttonName": "Work with us",
