--- a/data/services/mobileApp.json
+++ b/data/services/mobileApp.json
@@ -38,7 +38,7 @@
     ]
   },
   "bannerData": {
-    "title": "Industries We Serve As a Web App Development Company",
+    "title": "Industries We Serve As a Mobile App Development Company",
     "subtitle": "Our web application development services vary across but are not limited to:",
     "centerContent": "As a web app development company, we offer top-notch medical and pharmaceutical app development services to enterprises across the world. Our expertise in the custom web application development field enables us to deliver comprehensive healthcare software development services  such as Practice Management Systems (PMS) and Electronic Health Records (EHR) systems, telemedicine platforms, billing, insurance verification software tools, etc., capable of meeting your custom business requirements.",
     "buttonName": "Work with us",
@@ -81,7 +81,7 @@
     }
   ],
   "OurProcessNew": {
-    "heading": "Our Process for Dream Homes Realties",
+    "heading": "Our Process for Mobile App Develoment ",
     "Data1": [
       {
         "id": 1,
