--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "install": "^0.13.0",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.1",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
@@ -39,6 +43,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
     "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
@@ -48,6 +53,7 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.3.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "18.2.6",
