--- a/data/config.json
+++ b/data/config.json
@@ -9,7 +9,7 @@
     },
     "logo_dark": "/images/logo/logodarknew.png",
 
-    "logo_light": "/images/logo/logonew.png",
+    "logo_light": "/images/logo/logo.svg",
     "socialMedia": { 
         "facebook": "https://www.facebook.com/searchmyexpert/",
         "twitter": "https://twitter.com/searchmyexpert",
