--- a/data/service/Web Application Development.json
+++ b/data/service/Web Application Development.json
@@ -120,7 +120,7 @@
     }
   ],
   "ProcessBanner": {
-    "title": "Our Proven UI/UX Design Process "
+    "title": "Our Proven Web Development Process "
   },
   "ProcessData": [
     {
