--- a/data/industry/Blockchain Application Development.json
+++ b/data/industry/Blockchain Application Development.json
@@ -1,8 +1,8 @@
 {
   "BannerData": {
-    "title": "Financial Software Development Services",
-    "subtitle": "You deserve a team focused on your mission just as much as you are. Meet Zuca.",
-    "backgroundImage": "/industriesBanner.jpg",
+    "title": "Blockchain Application Development",
+    "subtitle": "You deserve a team focused on your mission just as much as you are. Meet AlumelTech.",
+    "backgroundImage": "/industry/7.svg",
     "buttonName": "Book a free consultation",
     "buttonLink": "/"
   },
