--- a/data/service/Mobile App Development.json
+++ b/data/service/Mobile App Development.json
@@ -2,7 +2,7 @@
   "BannerData": {
     "title": "Supercharge Your Business with Tailored Mobile Apps for Skyrocketing Success",
     "subtitle": "Explore Our Expertise: Custom Mobile Apps, UI/UX Excellence, and Seamless Development for Your Success.",
-    "backgroundImage": "/serviceBanner.jpg",
+    "backgroundImage": "/service/banner4.svg",
     "ButtonName": "Show me how",
     "ButtonHref": "/"
   },
