--- a/data/service/Android Application Development.json
+++ b/data/service/Android Application Development.json
@@ -121,7 +121,7 @@
   "FaqBanner": {
     "title": "Questions in Mind? 🤔",
     "subtitle": "We provide end-to-end web app development services, tailored exclusively to solve your unique business challenges.",
-    "buttonName": "Book Consultation Session",
+    "buttonName": "show Me How",
     "buttonLink": "/"
   },
   "FaqData": [
