--- a/data/industries/Blockchain_Application_Development.json
+++ b/data/industries/Blockchain_Application_Development.json
@@ -2,7 +2,7 @@
   "BannerData": {
     "title": "Revolutionize Your Business with Blockchain Solutions",
     "subtitle": "Your Challenges, Our Expertise – Transforming Industries with Blockchain Solutions",
-    "backgroundImage": "/industry/7.svg",
+    "backgroundImage": "/banner/block.png",
     "ButtonName": "Show me how",
     "ButtonHref": "/"
   },
