--- a/data/industries/Cloud Application Development.json
+++ b/data/industries/Cloud Application Development.json
@@ -2,7 +2,7 @@
   "BannerData": {
     "title": "Elevate Your Business with Cloud Application Development",
     "subtitle": "Your Goals, Our Solutions – Transforming Enterprises through Cloud Innovation",
-    "backgroundImage": "/industry/6.svg",
+    "backgroundImage": "/banner/cloud1.png",
     "ButtonName": "Show me how",
     "ButtonHref": "/"
   },
