--- a/data/service/Android Application Development.json
+++ b/data/service/Android Application Development.json
@@ -2,7 +2,7 @@
   "BannerData": {
     "title": "Transform Your Vision into Exceptional iOS Apps",
     "subtitle": "Your Vision, Our Expertise – Delivering Innovative Android Solutions",
-    "backgroundImage": "/service/banner7.svg",
+    "backgroundImage": "/banner/android.png",
     "ButtonName": "Show me how",
     "ButtonHref": "/"
   },
