--- a/data/service/IOS Application Development.json
+++ b/data/service/IOS Application Development.json
@@ -2,7 +2,7 @@
   "BannerData": {
     "title": "Transform Your Vision into Exceptional iOS Apps",
     "subtitle": "Your Ideas, Our Expertise – Delivering Innovative iOS Solutions",
-    "backgroundImage": "/service/banner6.svg",
+    "backgroundImage": "/banner/ios.png",
     "ButtonName": "Show me how",
     "ButtonHref": "/"
   },
