--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.6",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.2.4",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
