--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "0.6.2",
+    "@blocknote/react": "0.6.2",
+    "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/paragraph": "^2.10.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@floating-ui/react-dom": "^2.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/styles": "^6.0.21",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/multer": "^1.4.7",
     "@types/react-slick": "^0.23.10",
     "@types/sendgrid": "^4.3.0",
@@ -23,6 +32,7 @@
     "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
@@ -38,6 +48,7 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
@@ -54,9 +65,11 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@editorjs/embed": "^2.5.3",
+    "@types/cors": "^2.8.14",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.3.2",
-    "@types/react": "^18.2.14",
+    "@types/react": "^18.2.24",
     "@types/react-dom": "18.2.6",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
