--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mantine/styles": "^6.0.21",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
+    "@tinymce/tinymce-react": "^4.3.2",
     "@types/lodash.debounce": "^4.0.7",
     "@types/multer": "^1.4.7",
     "@types/react-slick": "^0.23.10",
@@ -50,6 +51,7 @@
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.1",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.1",
