--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@types/multer": "^1.4.7",
     "@types/react-slick": "^0.23.10",
     "@types/sendgrid": "^4.3.0",
+    "@types/swiper": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
@@ -63,11 +65,13 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.6",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "swr": "^2.2.4",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@editorjs/embed": "^2.5.3",
+    "@types/aos": "^3.0.7",
     "@types/cors": "^2.8.14",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^20.3.2",
